<resources>
    <string name="app_name">ToDoMo</string>
    <string name="hi_welcome">Hi, Welcome</string>
    <string name="sign_in_with_your_n_email_and_password">Sign in with your\n email and password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string><string name="get_started">Get Started</string>
    <string name="already_have_and_account">Already have and account?</string>
    <string name="sign_in_link">Sign in</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="next">Next</string>
    <string name="let_s_finished">Let\'s Finished</string>
    <string name="create_your_password">Create Your Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="finish">Finish</string>
    <string name="create">Create</string>
    <string name="new_event">New Event</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="schedule_date">Schedule Date</string>
    <string name="schedule_time">Schedule Time</string>
    <string name="priority">Priority</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="event">Event</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="welcome">Welcome</string>
    <string name="john_doe">John Doe</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="change_names">Change names</string>
    <string name="save_changes">Save changes</string>
    <string name="email">Email</string>
    <string name="new_email">New email</string>
    <string name="password">Password</string>
    <string name="save_password">Save password</string>
    <string name="star_password">************</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change password</string>
    <string name="log_out">Log Out</string>
    <string name="dev_info">Dev. info</string>
    <string name="name">Name :</string>
    <string name="developer_info">Developer Info</string>
    <string name="r_a_m_s_perera">R.A.M.S.Perera</string>
    <string name="student_id">Student ID :</string>
    <string name="_2021_t_01226">2021/T/01226</string>
    <string name="release_version">Release version :</string>
    <string name="_1_0">1.0</string>
    <string name="no_events_saved_yet">No events saved yet !</string>
    <string name="event_title_format">%1$s</string>
    <string name="event_date_time_format">%1$s</string>

</resources>