<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile_activity.ProfileScreenActivity">

  <include
      layout="@layout/profile_bubble_layout"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageButton
      android:id="@+id/BackArrow"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:background="@null"
      android:rotation="180"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/black_arrow_svg"
      tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

  <TextView
      android:id="@+id/ScreenTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:fontFamily="@font/arimo_bold"
      android:text="@string/profile"
      android:textSize="32sp"
      android:textColor="@color/purple"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/BackArrow"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintTop_toBottomOf="@id/ScreenTitle"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="280dp"
          android:background="@drawable/profile_gradient"
          android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/UserProfileImage"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/user_image"
            android:layout_marginStart="30dp"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="10dp"
            app:shapeAppearanceOverlay="@style/CircleImageView" />

        <TextView
            android:id="@+id/WelcomeProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:fontFamily="@font/arimo_regular"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/UserNameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/john_doe"
            android:fontFamily="@font/arimo_semi_bold"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:layout_marginStart="30dp"/>

      </LinearLayout>


      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="30dp"
          android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/EmailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="@font/arimo_medium"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/arimo_semi_bold"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="30dp">

        <TextView
            android:id="@+id/FirstNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:fontFamily="@font/arimo_medium"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/arimo_semi_bold"
            android:inputType="text"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/LastNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:fontFamily="@font/arimo_medium"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/arimo_semi_bold"
            android:inputType="text"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/SaveChangeNamesButton"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:background="@drawable/main_gradient_button_background"
            android:textColor="@color/white"
            android:text="@string/change_names"
            android:fontFamily="@font/arimo_medium"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="30dp"
          android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/CurrentPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:fontFamily="@font/arimo_medium"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/CurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text=""
            android:fontFamily="@font/arimo_semi_bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill,LabelFor"
            android:hint="@string/star_password" />

        <TextView
            android:id="@+id/NewPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:fontFamily="@font/arimo_medium"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/NewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text=""
            android:fontFamily="@font/arimo_semi_bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill,LabelFor"
            android:hint="@string/star_password" />

        <TextView
            android:id="@+id/ConfirmNewPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_new_password"
            android:fontFamily="@font/arimo_medium"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/ConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text=""
            android:fontFamily="@font/arimo_semi_bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill,LabelFor"
            android:hint="@string/star_password" />

        <Button
            android:id="@+id/SaveChangePasswordButton"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/main_gradient_button_background"
            android:fontFamily="@font/arimo_medium"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />
      </LinearLayout>

      <Button
          android:id="@+id/LogOutButton"
          android:layout_width="200dp"
          android:layout_height="50dp"
          android:background="@drawable/log_out_button_background"
          android:textColor="@color/white"
          android:text="@string/log_out"
          android:fontFamily="@font/arimo_medium"
          android:textSize="20sp"
          android:layout_marginTop="50dp"
          android:layout_gravity="center_horizontal"/>

      <TextView
          android:id="@+id/DevInfo"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="50dp"
          android:layout_marginBottom="24dp"
          android:text="@string/dev_info"
          android:fontFamily="@font/arimo_medium"
          android:textColor="@color/link_blue"
          android:textSize="22sp"
          android:clickable="true"
          android:focusable="true"
          android:background="?android:attr/selectableItemBackground"
          android:layout_gravity="center_horizontal" />
    </LinearLayout>
  </ScrollView>

  <ProgressBar
      android:id="@+id/EventSpinnerBar"
      style="?android:attr/progressBarStyle"
      android:layout_width="60dp"
      android:layout_height="60dp"
      android:indeterminateTint="@color/gray"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.5" />

  </androidx.constraintlayout.widget.ConstraintLayout>