<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_in_activity.SignInScreenActivity">

    <ImageView
        android:id="@+id/LoginScreenLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:srcCompat="@drawable/screen_logo"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/LoginGreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/arimo_bold"
        android:text="@string/hi_welcome"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginScreenLogo" />

    <TextView
        android:id="@+id/SignIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/arimo_medium"
        android:text="@string/sign_in_with_your_n_email_and_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginGreet" />

    <LinearLayout
        android:id="@+id/CredentialBars"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignIntro">

        <EditText
            android:id="@+id/LoginEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@drawable/sign_text_input_box_border"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/LoginPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:autofillHints=""
            android:background="@drawable/sign_text_input_box_border"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/LoginEmail" />

    </LinearLayout>

    <Button
        android:id="@+id/SignButton"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/main_gradient_button_background"
        android:drawableEnd="@drawable/white_arrow_svg"
        android:fontFamily="@font/arimo_medium"
        android:paddingStart="55dp"
        android:paddingEnd="35dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CredentialBars"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/signupSegment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/AskAccountCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="16sp"
            android:fontFamily="@font/arimo_medium"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/SignUpLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/arimo_medium"
            android:text="@string/sign_up"
            android:textColor="@color/link_blue"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/AskAccountCreate"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/LoginSpinnerBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:indeterminateTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>