<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up_activity.get_details_activity.GetDetailsScreenActivity">

    <ImageView
        android:id="@+id/SignUpGetDetailsScreenLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:srcCompat="@drawable/screen_logo"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/SignUpGetDetailsGreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/arimo_bold"
        android:text="@string/get_started"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpGetDetailsScreenLogo" />

    <LinearLayout
        android:id="@+id/SignUpGetDetailsSegment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpGetDetailsGreet">

        <TextView
            android:id="@+id/AskAlreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_and_account"
            android:textSize="16sp"
            android:fontFamily="@font/arimo_medium"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/SigInLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/arimo_medium"
            android:text="@string/sign_in_link"
            android:textColor="@color/link_blue"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/AskAlreadyAccount"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/InformationBars"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpGetDetailsSegment">

        <EditText
            android:id="@+id/EnterFirstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/sign_text_input_box_border"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/enter_first_name"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/EnterLastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:background="@drawable/sign_text_input_box_border"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/enter_last_name"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/EnterEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:background="@drawable/sign_text_input_box_border"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/NextStepButton"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/main_gradient_button_background"
        android:drawableEnd="@drawable/white_arrow_svg"
        android:fontFamily="@font/arimo_medium"
        android:paddingStart="25dp"
        android:paddingEnd="12dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InformationBars"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlSymmetry" />

    <ProgressBar
        android:id="@+id/SignUpSpinnerBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:indeterminateTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>