<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up_activity.set_password_activity.SetPasswordScreenActivity">

    <ImageView
        android:id="@+id/SetPasswordScreenLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:srcCompat="@drawable/screen_logo"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/SetPasswordGreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/arimo_bold"
        android:text="@string/let_s_finished"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SetPasswordScreenLogo" />

    <TextView
        android:id="@+id/SetPasswordAnnounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/arimo_bold"
        android:text="@string/create_your_password"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SetPasswordGreet" />

    <LinearLayout
        android:id="@+id/PasswordBars"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SetPasswordAnnounce">

        <EditText
            android:id="@+id/NewPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:background="@drawable/sign_text_input_box_border"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:autofillHints=""
            android:background="@drawable/sign_text_input_box_border"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/LoginEmail" />

    </LinearLayout>

    <Button
        android:id="@+id/FinishButton"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:background="@drawable/main_gradient_button_background"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/arimo_medium"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordBars" />

    <ProgressBar
        android:id="@+id/PasswordSpinnerBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:indeterminateTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>